--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "gsap": "^3.13.0",
     "install": "^0.13.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
